--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				edges: [],
 				EVs: {},
 				nodepos: {}
-			}
+			}, animation;
 
 			if (debug) {
 				info.nodes = Array.from({length: 8}).map((n, i) => `V${i + 1}`);
@@ -117,9 +117,14 @@
 						"charging": 2,
 						"discharging": 3,
 						"max": 100,
-						"speed": 12,
+						"speed": 2,
 						"isCharging": true,
-						"route": [{type: 'travel', from: 'V1', to: 'V4', time: 0}, {type: 'charge', at: 'V4', time: 2}, {type: 'discharge', at: 'V4', time: 5}, {type: 'travel', from: 'V4', to: 'V5', progress: 0, time: 5}]
+						"route": [
+							{type: 'travel', from: 'V1', to: 'V4', time: 0, battery: 80},
+							{type: 'charge', at: 'V4', time: 4, battery: 74},
+							{type: 'discharge', at: 'V4', time: 5, battery: 76},
+							{type: 'travel', from: 'V4', to: 'V5', progress: 0, time: 5, battery: 76}
+						]
 					},
 					"P2": {
 						"name": "P2",
@@ -239,12 +244,13 @@
 					}
 					let vCoords = info.nodepos[veh.source];
 					veh.pos = veh.source;
-					// [{type:'travel',from:'V1',to:'V2',time:0, progress: 0.1},{type:'charge',from:'V2',time:4},{type:'travel',from:'V2',to:'V3',time:8, progress: 0.7}]
 					if (last) switch (last.type) {
 						case 'charge': {
 							veh.isCharging = true;
 							vCoords = info.nodepos[last.at];
 							veh.pos = last.at;
+							veh.currentBattery = last.battery + (time - last.time) * veh.charging;
+							if (veh.currentBattery > veh.max) veh.currentBattery = veh.max;
 							break;
 						}
 						case 'discharge': {
@@ -258,6 +264,8 @@
 							let onEdge = info.edges.find(edge => (edge.from === last.from && edge.to === last.to) || (edge.to === last.from && edge.from === last.to)), progress = (time - last.time) * veh.speed / onEdge.weight;
 							if (progress > 1) progress = 1;
 							veh.pos = `${last.from} to ${last.to}`;
+							veh.currentBattery = last.battery - ([time - last.time, onEdge.weight / veh.speed].sort((a, b) => a - b)[0]) * veh.discharging;
+							if (veh.currentBattery < 0) alert(veh.currentBattery = 0); // Should NEVER happen
 							vCoords = Array.from({length: 2}).map((n, i) => ((1 - progress) * info.nodepos[last.from][i] + progress * info.nodepos[last.to][i]));
 							break;
 						}
@@ -425,6 +433,28 @@
 
 				outputEvents = algorithm(graph, info.EVs);
 			}
+
+			function animate (inf) {
+				let lastTime = Object.values(inf.EVs).reduce((acc, cur) => {
+					if (!cur.route.length) return acc;
+					let lastNode = cur.route[cur.route.length - 1], temp = lastNode.time;
+					if (lastNode.type === 'travel') temp += inf.edges.find(edge => (edge.from === lastNode.from && edge.to === lastNode.to) || (edge.to === lastNode.from && edge.from === lastNode.to)).weight / cur.speed;
+					return acc > temp ? acc : temp;
+				}, 0);
+				const skew = 30 / lastTime;
+				console.log(lastTime, skew);
+				let _time = 0;
+				animation = setInterval(() => {
+					draw(inf, Object.values(inf.EVs), _time++ / 30 / skew);
+					if (_time > frameRate * 30) {
+						clearInterval(animation);
+						console.log('Done');
+					}
+				}, 1000  * skew / frameRate);
+			}
+
+			if (debug) animate(info);
+
 		</script>
 
 	</head>
